--- a/part4/jpa/src/main/resources/application.yml
+++ b/part4/jpa/src/main/resources/application.yml
@@ -1,6 +1,12 @@
+server:
+  port: 8080
 spring:
   h2:
     console:
       enabled: true
-server:
-  port: 8080
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    defer-datasource-initialization: true
