--- a/part4/jpa/src/main/resources/application.yml
+++ b/part4/jpa/src/main/resources/application.yml
@@ -16,6 +16,8 @@ spring:
   datasource:
     url: jdbc:mariadb://manbalboy.com:11405/book_manager
     driver-class-name: org.mariadb.jdbc.Driver
+    username: root
+    password: qkdtkcjd
   sql:
     init:
       mode: always
