이그노어 추가

--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,5 @@ gradle-app.setting
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij+all,gradle
 swagger/HELP.md
+
+part4/jpa/src/main/resources/application_test.yml
