--- a/part6/cloud/fastcam-spring-apigw/src/main/resources/application.yml
+++ b/part6/cloud/fastcam-spring-apigw/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server.port: 7090
 spring.application:
-  name: hanbit-api-gw
+  name: api-gw
 
 
 spring.config.import: api-gw.yml,eureka-client.yml
